--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        lilypond-version: [2.22.0, 2.20.0, 2.18.0, 2.16.0, 2.14.2]
+        lilypond-version: [2.22.0, 2.20.0, 2.18.0, 2.16.0]
     steps:
     - name: Check out repository
       uses: actions/checkout@v2
