--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         rm include-settings.ily
 
     - name: Archive PDFs
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@main
       with:
         name: ${{ runner.os }} artifacts
         path: '*.pdf'
